tests/cache_check.txt
  File "<string>", line 14
    print(f'MFCC     expected (80,)         -> {" PASS\
          ^
SyntaxError: unterminated string literal (detected at line 14)
